Fix error graphic being misaligned

--- a/app/javascript/styles/mastodon/basics.scss
+++ b/app/javascript/styles/mastodon/basics.scss
@@ -134,7 +134,6 @@ body {
 
       &__illustration {
         img {
-          display: block;
           max-width: 470px;
           width: 100%;
           height: auto;
